syntax = "proto3";

package user;

option go_package = "./proto/user;user";

service User {
	//对外提供添加服务
	rpc AddUser(UserInfo) returns (Response) {}
	rpc DeleteUser(UserId) returns (Response) {}
	rpc UpdateUser(UserInfo) returns (Response) {}
	rpc FindUserByID(UserId) returns (UserInfo) {}
	rpc FindAllUser(FindAll) returns (AllUser) {}

	// 
	rpc AddRole(UserRole) returns (Response) {}
	rpc UpdateRole(UserRole) returns (Response) {}
	rpc DeleteRole(UserRole) returns (Response) {}

	rpc IsRight(UserRight) returns (Right) {}
}

message UserRole {
	int64 user_id = 1;
	repeated int64 role_id = 2;
}

message UserRight {
	int64 user_id = 1;
	string action = 2;
}

message Right {
	bool access = 1;
}

message UserInfo {
	int64 id = 1;
	string user_name = 2;
	string user_email = 3;
	bool is_admin = 4;
	string user_pwd = 5;
	int32 user_status = 6;
}

message UserId {
	int64 id = 1;
}

message FindAll {

}

message Response {
	string msg = 1 ;
}

message AllUser {
	repeated UserInfo user_info = 1;
}


